# formal2021_interpretor

./: .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp
Automaton/: Automaton.cpp  Automaton.h  TokenAutomaton.cpp  TokenAutomaton.h  token.cpp  token.h
Node/: Brackets.cpp  Brackets.h  CallingFunction.cpp  CallingFunction.h  Def.cpp  Def.h  Expression.cpp  Expression.h  For.cpp  For.h  If.cpp  If.h  Node.cpp  Node.h  Variable.cpp  Variable.h  While.cpp  While.h  jump_function.h
Types/: MyArray.h  MyInt.cpp  MyInt.h  MyNullType.cpp  MyNullType.h  MyString.cpp  MyString.h  MyType.cpp  MyType.h
